--- a/client/.env
+++ b/client/.env
@@ -1,4 +1,4 @@
  # your Key ID (not secret)
 VITE_RZP_KEY_ID=rzp_test_RAen5MzMyPI8c9  
 VITE_RAZORPAY_KEY_ID=rzp_test_RAen5MzMyPI8c9 # your Key ID (not secret)
-VITE_API_BASE=http://localhost:5173
+ VITE_API_BASE=https://razorpay-server-xghc.onrender.com
